# ChronosFinance

./: .env.example  .gitignore  README.md  docker-compose.yml
chronos_ai/: Dockerfile  main.py  pyproject.toml  requirements.txt
chronos_ai/ai/: __init__.py
chronos_ai/ai/agents/: __init__.py  base.py  chat_agent.py
chronos_ai/ai/api/: __init__.py  chat.py
chronos_ai/ai/core/: __init__.py  config.py  sse.py
chronos_ai/ai/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
chronos_ai/ai/tools/: __init__.py  definitions.py  registry.py
chronos_finance/: .dockerignore  .env.example  .ingest_scheduler_state.json  Dockerfile  docker-compose.override.yml  docker-compose.yml  requirements.txt
chronos_finance/app/: app_factory.py  main.py  main_read.py  main_write.py
chronos_finance/scripts/: audit_data_quality.py  (+11 more)
chronos_web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: API_WRITE_ARCHITECTURE.md  OPERATIONS_RUNBOOK.md  PRE_LAUNCH_SECURITY_REVIEW.md  SERVER_DATA_SYNC_GUIDE_CN.md
scripts/: ai_infra_50_jan4_to_apr17_2026.csv  ai_infra_50_q1_2026_review.md  ai_infra_q1_diagrams.md  backup_db.sh  backup_to_r2_latest.sh  chronos_core12.md  compare_ai_infra_50.py  core12_portfolio.py  portfolio_stats_ai_infra_50.py  restore_db.sh  restore_from_r2_manifest.sh
spec/: AI_INTEGRATION_PLAN_CN.md  CODEBASE_OVERVIEW_CN.md  DATA_REARCHITECTURE_PLAN.md  DATA_REARCHITECTURE_PLAN_CN.md  DEV_COMPLETION_REPORT.md  DEV_PROGRESS.md  FRONTEND_UPGRADE_PLAN_CN.md
(+115 files in other folders)
